fix wrap height

--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,7 @@ img {
 
 
 .wrap {
-	height: 100%;
+	height: 98%;
 }
 
 ul.options {
